<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
	<name>odometry_converter</name>
	<version>1.0.0</version>
	<description>
		Converts standard odometry messages to maplab format to use as input odometry sources.
	</description>
	<maintainer email="blumh@ethz.ch">cvg-robotics</maintainer>
	<license>Apache 2.0</license>

	<buildtool_depend>catkin_simple</buildtool_depend>
	<buildtool_depend>catkin</buildtool_depend>

	<depend>gflags_catkin</depend>
	<depend>glog_catkin</depend>
  <depend>maplab_msgs</depend>
  <depend>odometry_msgs</depend>
  <depend>sensor_msgs</depend>

</package>
